Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   </head>
  
   <body>
-    Hello World
-  </body>
+    <div>
+        <img src="images/Pas foto putih.jpg" alt="profile image" />
+        <h2>Farhan Elmizan</h2>
+     </div>  </body>
  
 </html>
-
-
