Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   </head>
  
   <body>
-    <div>
-        <img src="images/Pas foto putih.jpg" alt="profile image" />
-        <h2>Farhan Elmizan</h2>
-     </div>  </body>
+    <div id="profile-container">
+        <img id="profile-image" src="images/Pas foto putih.jpg" alt="profile image" />
+        <h2 id="profile-name">Farhan Elmizan</h2>
+     </div> 
+    </body>
  
 </html>
